# x402-agent-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  data.py  db.py  main.py  mcp_server.py  receipts.py  routes.py  x402_server.py
client/: agent_demo.py  pay_and_fetch.py
docs/: blog-post.md  installed-truth.md
scripts/: gen_wallets.py  seed_edgar.py
tests/: test_config.py  test_data.py  test_db_integration.py  test_x402_server.py
