[project]
name = "x402-agent-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "x402[evm,fastapi,httpx,mcp,svm]==2.13.1",
]

[dependency-groups]
dev = [
    "base58>=2.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "live: end-to-end tests that spend testnet funds against live chains and the facilitator (opt-in via -m live)",
]
