[project]
name = "x402-agent-api"
version = "0.1.0"
description = "Multi-chain x402 agent-payable data API: FastAPI REST + MCP, EVM + Solana, Postgres receipts"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "x402[evm,fastapi,httpx,mcp,svm]==2.13.1",
]

[dependency-groups]
dev = [
    "base58>=2.1.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
    "live: end-to-end tests that spend testnet funds against live chains and the facilitator (opt-in via -m live)",
]
